--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,7 +1,5 @@
+= link_to 'Back', categories_path, class: 'btn btn-primary'
+= link_to 'Show category', category, class: 'btn btn-primary'
 %h1 Editing category
 
 = render 'form'
-
-= link_to 'Show', category
-\|
-= link_to 'Back', categories_path, class: 'btn btn-primary'
