--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,17 +1,26 @@
 %p#notice= notice
+= link_to 'Back', categories_path, class: 'btn btn-primary'
+- if current_user && current_user.admin?
+  = link_to 'Edit category', edit_category_path(category), class: 'btn btn-info'
 
-%p
+
+%p.p-t-10
   %b Name:
   = category.name
 
-%p
-  - category.products.each do |product|
-    = product.title
+%p.p-b-10.bordered-bot-thick
+  - if category.products.any?
+    \ Current products:
+    %br
+    - category.products.each do |product|
+      = link_to product.title, category_product_path(product.category, product), class: 'product-links'
+      \ ,
+  - else
+    \ There isn't any product for this category, yet.
 
-%p
-  %h3 New product
-  = render 'products/form'
-
-= link_to 'Edit', edit_category_path(category)
-\|
-= link_to 'Back', categories_path, class: 'btn btn-primary'
+- if current_user && current_user.admin?
+  %a.btn.btn-primary{"aria-controls" => "collapseExample", "aria-expanded" => "false", "data-toggle" => "collapse", :href => "#collapseExample"}
+    \ Add new product
+  #collapseExample.collapse
+    .well
+      .bordered-bot.bordered-top= render 'products/form'
