--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,8 +1,11 @@
+= link_to "Back", :back, class: 'btn btn-primary'
 %h2
   Edit #{resource_name.to_s.humanize}
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = f.error_notification
   .form-inputs
+    = f.input :firstname, required: true
+    = f.input :lastname, required: true
     = f.input :email, required: true, autofocus: true
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       %p
@@ -11,8 +14,7 @@
     = f.input :password_confirmation, required: false
     = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
   .form-actions
-    = f.button :submit, "Update"
-%h3 Cancel my account
+    = f.submit "Update", class: 'btn btn-primary'
+%h3.bordered-top.p-t-10 Cancel my account
 %p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger'}
