--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,13 +9,14 @@
     = javascript_include_tag 'application'
 
   %body
-    %nav.navbar.navbar-default
-      .container-fluid
-        .navbar-header
-          %span.navbar-brand #{AppConfig.workshops_name}
-        %p.navbar-text.navbar-right
-          Links should go here
-    .container-fluid
-      .row
-        .col-lg-12
-          = yield
+    %header
+      %nav.navbar
+        .container.container-fluid
+          .navbar-header
+            %span.navbar-brand #{AppConfig.workshops_name}
+          %p.navbar-text.m-v-0.m-t-3.navbar-right
+            -# Links should go here
+            = link_to 'Categories', categories_path, class: 'btn btn-primary btn-sm'
+            = link_to 'Products', root_path, class: 'btn btn-primary btn-sm'
+            = links_depending_on_user
+  .container.container-fluid= yield
