--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,5 @@
+= link_to 'Back', categories_path, class: 'btn btn-primary'
 %h1 New product
 
 = render 'form'
 
-= link_to 'Back', category_products_path
