--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -16,4 +16,4 @@
     = f.label :price, class: 'control-label'
     = f.text_field :price, class: 'form-control'
 
-  = f.submit 'Add product', class: 'btn btn-primary'
+  = f.submit 'Submit', class: 'btn btn-primary'
