--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,6 @@
+= link_to 'Back', category_path(category), class: 'btn btn-primary'
+= link_to 'Show', category_product_path(category, product), class: 'btn btn-primary'
 %h1 Editing product
 
 = render 'form'
 
-= link_to 'Show', category_product_path(category, product)
-\|
-= link_to 'Back', category_path(category)
