--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -30,7 +30,7 @@
 
     %p
       %b Category
-      = product.category.name
+      = product.category_name
 
     %h3.p-t-10.bordered-top Reviews
     = render reviews
