--- a/app/views/reviews/_userreviews.html.haml
+++ b/app/views/reviews/_userreviews.html.haml
@@ -4,6 +4,6 @@
   .col-md-2
     = review.rating
   .col-md-2
-    = link_to review.product.title, category_product_path(review.product.category, review.product)
+    = link_to review.product_title, category_product_path(review.product.category, review.product)
   .col-md-2
     = review.created_at.strftime("%d/%m/%y")
