Non-admin users can add products too :P

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -18,7 +18,7 @@
   - else
     \ There isn't any product for this category, yet.
 
-- if current_user && current_user.admin?
+- if current_user &&
   %a.btn.btn-primary{"aria-controls" => "collapseExample", "aria-expanded" => "false", "data-toggle" => "collapse", :href => "#collapseExample"}
     \ Add new product
   #collapseExample.collapse
